Add or update the Azure App Service build and deployment workflow config

--- a/.github/workflows/main_pdftoxls.yml
+++ b/.github/workflows/main_pdftoxls.yml
@@ -2,7 +2,7 @@
 # More GitHub Actions for Azure: https://github.com/Azure/actions
 # More info on Python, GitHub Actions, and Azure App Service: https://aka.ms/python-webapps-actions
 
-name: Build and deploy Python app to Azure Web App - pdftoxls
+name: Build and deploy Python app to Azure Web App - PDFToXLS
 
 on:
   push:
@@ -64,6 +64,6 @@ jobs:
         uses: azure/webapps-deploy@v2
         id: deploy-to-webapp
         with:
-          app-name: 'pdftoxls'
+          app-name: 'PDFToXLS'
           slot-name: 'Production'
-          publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_87B55D82DF834D19A37415A42D68A330 }}
+          publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_789906AD2898435791CAD3CBFA204708 }}
